# optimal-control

./: AGENT.md  Cargo.toml  README.md
src/: agent.rs  bangbang.rs  controllability.rs  dynamics.rs  hjb.rs  lib.rs  lqr.rs  pontryagin.rs  riccati.rs  trajectory.rs
