[package]
name = "optimal-control"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuperInstance/optimal-control"
description = "Optimal control theory in Rust — LQR, bang-bang control, Hamilton-Jacobi-Bellman, Pontryagin's maximum principle"

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
path = "src/lib.rs"
